Brought versions.cfg in line with the grok 1.0 release candidate versions.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,9 @@ extends = versions.cfg
 versions = versions
 develop = .
 
+[versions]
+grokcore.secuirty=
+
 [interpreter]
 recipe = zc.recipe.egg
 eggs = grokcore.security
