Remove pinning down of grokcore.security in versions.cfg.

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,4 +1,5 @@
-# This is a duplication of grok/versions.cfg revision 102586
+# This is a duplication of grok/versions.cfg revision 102586 (with
+# grokcore.security removed, of course).
 # to get differences...
 #   svn diff -r 102586 svn://svn.zope.org/repos/main/grok/trunk/versions.cfg
 
@@ -7,7 +8,6 @@
 ClientForm = 0.2.9
 grokcore.component = 1.7
 grokcore.formlib = 1.1
-grokcore.security = 1.1
 grokcore.view = 1.7
 grokcore.viewlet = 1.0
 grokui.admin = 0.3.2
