--- a/versions.cfg
+++ b/versions.cfg
@@ -1,5 +1,4 @@
-# This is a duplication of grok/versions.cfg revision 102586 (with
-# grokcore.security removed, of course).
+# This is a duplication of grok/versions.cfg revision 102586.
 # to get differences...
 #   svn diff -r 102586 svn://svn.zope.org/repos/main/grok/trunk/versions.cfg
 
