Remove local versions.cfg.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,8 @@
 [buildout]
-parts = interpreter test
-extends = versions.cfg
-versions = versions
 develop = .
+parts = interpreter test
+extends = http://grok.zope.org/releaseinfo/grok-1.0b1.cfg
+versions = versions
 
 [versions]
 grokcore.security =
