Use newer martian and grokcore.component.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,8 @@ versions = versions
 
 [versions]
 grokcore.security =
+grokcore.component = 2.0
+martian = 0.12
 
 [interpreter]
 recipe = zc.recipe.egg
