--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop = .
 parts = interpreter test
-extends = http://grok.zope.org/releaseinfo/grok-1.0b1.cfg
+extends = http://grok.zope.org/releaseinfo/grok-1.1a1.cfg
 versions = versions
 
 [versions]
