--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,4 +17,5 @@ interpreter = python
 [test]
 recipe = zc.recipe.testrunner
 eggs = grokcore.security
+       grokcore.security[test]
 defaults = ['--tests-pattern', '^f?tests$', '-v']
