--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,15 @@
 [buildout]
-develop = .
-parts = interpreter test
 extends = https://raw.githubusercontent.com/zopefoundation/groktoolkit/resurrection-python3/grok.cfg
+develop = .
+parts =
+  interpreter
+  test
 versions = versions
+extensions =
+  mr.developer
+auto-checkout =
+  grok
+  grokcore.view
 
 [versions]
 grokcore.security =
