Add coverage to tox, cleanup buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,7 +18,7 @@ grokcore.security =
 recipe = zc.recipe.egg
 eggs =
   grokcore.security[role]
-interpreter = python
+interpreter = py
 
 [test]
 recipe = zc.recipe.testrunner
