--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,4 +25,4 @@ recipe = zc.recipe.testrunner
 eggs =
   grokcore.security
   grokcore.security[test]
-defaults = ['--tests-pattern', '^f?tests$', '-v']
+defaults = ['-vc']
