update buildout extends URL

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
-extends = https://raw.githubusercontent.com/zopefoundation/groktoolkit/resurrection-python3/grok.cfg
+extends =
+  https://raw.githubusercontent.com/zopefoundation/groktoolkit/master/grok.cfg
 develop = .
 parts =
   interpreter
