--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,29 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
+*.egg-info/
+*.profraw
 *.pyc
-.coverage*
+*.pyo
+.coverage
+.coverage.*
+.eggs/
 .installed.cfg
 .mr.developer.cfg
-.tox
-__pycache__
-bin
-dev
-develop-eggs
-htmlcov/
+.tox/
+.vscode/
+__pycache__/
+bin/
+build/
+coverage.xml
+develop-eggs/
+develop/
+dist/
+docs/_build
+eggs/
+etc/
 lib/
+lib64
+log/
 parts/
-pip-selfcheck.json
 pyvenv.cfg
-src/*.egg-info
+var/
