--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --pre tox
+        pip install tox
     - name: Test
       run: tox4 -vv -e ${{ matrix.config[1] }}
     - name: Coverage
