--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install tox
     - name: Test
-      run: tox4 -vv -e ${{ matrix.config[1] }}
+      run: tox -vv -e ${{ matrix.config[1] }}
     - name: Coverage
       if: matrix.config[1] == 'coverage'
       run: |
