--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
   schedule:
     - cron: '0 12 * * 0'  # run once a week on Sunday
+  # Allow to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,7 +16,16 @@ jobs:
       matrix:
         config:
         # [Python version, tox env]
+        - ["3.8",   "lint"]
+        - ["2.7",   "py27"]
+        - ["3.5",   "py35"]
+        - ["3.6",   "py36"]
         - ["3.7",   "py37"]
+        - ["3.8",   "py38"]
+        - ["3.9",   "py39"]
+        - ["pypy2", "pypy"]
+        - ["pypy3", "pypy3"]
+        - ["3.8",   "coverage"]
 
     runs-on: ubuntu-latest
     name: ${{ matrix.config[1] }}
@@ -37,7 +48,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install tox
     - name: Test
-      run: tox -vv -e ${{ matrix.config[1] }}
+      run: tox -e ${{ matrix.config[1] }}
     - name: Coverage
       if: matrix.config[1] == 'coverage'
       run: |
