--- a/.meta.toml
+++ b/.meta.toml
@@ -2,14 +2,15 @@
 # https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [meta]
 template = "pure-python"
-commit-id = "088b42973de23e2f91539abdc28173e580eeb0a1"
+commit-id = "cc836c39"
 
 [python]
-with-appveyor = false
 with-pypy = true
 with-legacy-python = true
-with-docs = false
 with-sphinx-doctests = false
+with-macos = false
+with-windows = false
+with-future-python = false
 
 [tox]
 use-flake8 = true
